--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novinky</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/news.css">
     <link rel="icon" type="image/png" href="logos/fav.png">
     <script src="script.js"></script>
 </head>
@@ -59,11 +59,10 @@
         </div>
     </main>
 
-    <!-- Modal (na konci body) -->
 <div id="modal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeModal()">&times;</span>
-    <h2 id="modal-title"></h2>
+    <h1 id="modal-title"></h1>
     <p id="modal-text"></p>
   </div>
 </div>
