--- a/joinus.html
+++ b/joinus.html
@@ -29,26 +29,13 @@
                         <li>Zapni Minecraft (verze 1.20+).</li>
                         <li>V menu klikni na <b>Multiplayer</b>.</li>
                         <li>Vyber <b>Direct Connection</b>.</li>
-                        <li>Do pole <b>Server Address</b> zadej: <span style="color:#1db954;">play.naseserver.cz</span></li>
+                        <li>Do pole <b>Server Address</b> zadej: <span onclick="copyIP()" style="color:#1db954; cursor: pointer;">play.naseserver.cz</span></li>
                         <li>Klikni na <b>Join Server</b>.</li>
                     </ol>
                 </div>
-        </div>
 
-        <div id="box-news">
-            <div id="news">
-                <div id="text">
-                    <!-- <ol>
-                        <li>Zapni Minecraft (verze 1.20+).</li>
-                        <li>V menu klikni na <b>Multiplayer</b>.</li>
-                        <li>Vyber <b>Přidat server</b>.</li>
-                        <li>Do pole <b>Adresa serveru</b> vlož: <span style="color:#1db954;">play.naseserver.cz</span></li>
-                        <li>Ulož a klikni na <b>Připojit</b>.</li>
-                    </ol> -->
-                </div>
-                <button class="btn" onclick="copyIP()">📋 Zkopírovat IP</button>
-            </div>
         </div>
+        
     </main>
 
     <script>
