--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Luke Survival Darkrise</h1>
         <p id="hero-text">Minecraft server od roku 2020</p>
             <div class="server-status">
-                <span>Status: <span id="status">Načítám...</span></span>
+                <span>Status: <span id="status">Loading...</span></span>
                 <span>Online players: <span id="players">0</span></span>
             </div>
 
