--- a/rules.html
+++ b/rules.html
@@ -19,5 +19,25 @@
             <li><a href="dynmap.html">Dyn mapa</a></li>
         </ul>
     </nav>
+
+   <main>
+    <div id="rules">
+        <h2>Pravidla serveru</h2>
+        <ol>
+            <li>Respektuj ostatní hráče – žádné urážky, šikana ani toxicita.</li>
+            <li>Žádné cheaty, hacky, x-ray, macro nebo jiné nelegální výhody.</li>
+            <li>Nenič cizí stavby (griefing je zakázán).</li>
+            <li>Nekradej z truhel, beden ani farm cizích hráčů.</li>
+            <li>Nespamuj ani neflooduj chat.</li>
+            <li>Reklama na jiné servery nebo weby bez povolení je zakázána.</li>
+            <li>Bugy a chyby serveru nevyužívej – nahlas je adminům.</li>
+            <li>Stavby musí být slušné – žádný nevhodný obsah.</li>
+            <li>Poslouchej adminy a moderátory – jejich slovo je konečné.</li>
+            <li>Užívej si hru a chovej se fér.</li>
+        </ol>
+    </div>
+</main>
+
+
 </body>
 </html>
