--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <script>
 
-const serverIP = 'play.survival-games.cz'; //IP adresa serveru
+const serverIP = 'hypixel.net'; //IP adresa serveru
 
 fetch(`https://api.mcsrvstat.us/2/${serverIP}`)
   .then(response => response.json())
