--- a/rules.html
+++ b/rules.html
@@ -22,18 +22,14 @@
 
    <main>
     <div id="rules">
-        <h2>Pravidla serveru</h2>
+        <h1>Pravidla serveru</h1>
         <ol>
-            <li>Respektuj ostatní hráče – žádné urážky, šikana ani toxicita.</li>
-            <li>Žádné cheaty, hacky, x-ray, macro nebo jiné nelegální výhody.</li>
-            <li>Nenič cizí stavby (griefing je zakázán).</li>
-            <li>Nekradej z truhel, beden ani farm cizích hráčů.</li>
+            <li>Respektuj ostatní – nenadávej ostatním.</li>
+            <li>Necheatuj a nehackuj.</li>
             <li>Nespamuj ani neflooduj chat.</li>
             <li>Reklama na jiné servery nebo weby bez povolení je zakázána.</li>
-            <li>Bugy a chyby serveru nevyužívej – nahlas je adminům.</li>
-            <li>Stavby musí být slušné – žádný nevhodný obsah.</li>
-            <li>Poslouchej adminy a moderátory – jejich slovo je konečné.</li>
-            <li>Užívej si hru a chovej se fér.</li>
+            <li>Najité bugy a chyby serveru ihned nahlas.</li>
+            <li>Poslouchej adminy a moderátory.</li>
         </ol>
     </div>
 </main>
