--- a/news.html
+++ b/news.html
@@ -63,6 +63,8 @@
   <div class="modal-content">
     <span class="close" onclick="closeModal()">&times;</span>
     <h1 id="modal-title"></h1>
+    <p id="modal-date"></p>
+    <br>
     <p id="modal-text"></p>
   </div>
 </div>
