--- a/joinus.html
+++ b/joinus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IP adresa</title>
-    <link rel="stylesheet" href="/styles/joinus.css">
+    <link rel="stylesheet" href="styles/joinus.css">
     <link rel="icon" type="image/png" href="logos/fav.png">
 </head>
 <body>
