--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novinky</title>
-    <link rel="stylesheet" href="/styles/news.css">
+    <link rel="stylesheet" href="styles/news.css">
     <link rel="icon" type="image/png" href="logos/fav.png">
     <script src="script.js"></script>
 </head>
