--- a/dynmap.html
+++ b/dynmap.html
@@ -20,6 +20,6 @@
         </ul>
     </nav>
 
-    <iframe src="http://ms33.hicoria.cloud:29073/#"frameborder="0" ></iframe>
+    <iframe src=""frameborder="0" ></iframe>
 </body>
 </html>
