--- a/news.html
+++ b/news.html
@@ -25,21 +25,21 @@
             <div id="news">
                 <img src="images/background_1.png" alt="">
                 <h1>Nadpis</h1>
-                <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
+                <p id="text">Lorec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
                 <button class="btn" onclick="openModal('article1')">Číst více</button>
             </div>
 
              <div id="news">
                 <img src="images/background_2.png" alt="">
                 <h1>Nadpis</h1>
-                <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
+                <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elfsdfsdfwdfasgsdgasfgsfgdgit. Donec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
                 <button class="btn" onclick="openModal('article2')">Číst více</button>
             </div>
 
              <div id="news">
                 <img src="images/background_4.png" alt="">
                 <h1>Nadpis</h1>
-                <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
+                <p id="text">Lorem ipsum dolor sit amet, consectet             ur adipiscing elit. Donec hendrerit sollicitudin ante eget ultricies. Maecenas eget urna eu arcu tempor elementum. Phasellus pretium, neque id aliquet sagittis, dui lectus fringilla lectus, a porttitor diam nunc lobortis tellus. Aenean sit amet ligula pulvinar, gravida odio in, mattis quam.</p>
                 <button class="btn" onclick="openModal('article3')">Číst více</button>
             </div>
 
